--- a/liquidhaskell-cabal.cabal
+++ b/liquidhaskell-cabal.cabal
@@ -24,6 +24,7 @@ library
   build-depends:       base >= 4.4 && < 5
                      , Cabal
                      , filepath >= 1.3 && <1.5
+                     , directory
   default-language:    Haskell2010
 
 source-repository head
